[gd_scene load_steps=3 format=2]

[ext_resource path="res://theme/theme_gray.tres" type="Theme" id=1]
[ext_resource path="res://scene/gui/AutoColorSampleDIalog.gd" type="Script" id=2]

[node name="AutoColorSampleDialog" type="ConfirmationDialog"]
margin_right = 400.0
margin_bottom = 300.0
rect_min_size = Vector2( 400, 400 )
theme = ExtResource( 1 )
popup_exclusive = true
window_title = "Automatically Color Samples"
resizable = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -43.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 384.0
margin_bottom = 349.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 384.0
margin_bottom = 21.0
text = "Target Attribute:"

[node name="AttributeItemList" type="ItemList" parent="MarginContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 384.0
margin_bottom = 141.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StartHueHbox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 145.0
margin_right = 384.0
margin_bottom = 176.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/StartHueHbox"]
margin_top = 5.0
margin_right = 225.0
margin_bottom = 26.0
rect_min_size = Vector2( 225, 0 )
text = "Starting Hue Range: "
align = 2

[node name="StartHueSpinbox" type="SpinBox" parent="MarginContainer/VBoxContainer/StartHueHbox"]
margin_left = 229.0
margin_right = 384.0
margin_bottom = 31.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
align = 1

[node name="EndHueHbox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 384.0
margin_bottom = 211.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/EndHueHbox"]
margin_top = 5.0
margin_right = 225.0
margin_bottom = 26.0
rect_min_size = Vector2( 225, 0 )
text = "Ending Hue Range:"
align = 2

[node name="EndHueSpinbox" type="SpinBox" parent="MarginContainer/VBoxContainer/EndHueHbox"]
margin_left = 229.0
margin_right = 384.0
margin_bottom = 31.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0
align = 1

[node name="MinSatHbox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 215.0
margin_right = 384.0
margin_bottom = 246.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MinSatHbox"]
margin_top = 5.0
margin_right = 225.0
margin_bottom = 26.0
rect_min_size = Vector2( 225, 0 )
text = "Minimum Saturation:"
align = 2

[node name="MinSatSpinbox" type="SpinBox" parent="MarginContainer/VBoxContainer/MinSatHbox"]
margin_left = 229.0
margin_right = 384.0
margin_bottom = 31.0
size_flags_horizontal = 3
min_value = 0.25
max_value = 1.0
step = 0.01
value = 0.7
align = 1

[node name="MaxSatHbox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 250.0
margin_right = 384.0
margin_bottom = 281.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MaxSatHbox"]
margin_top = 5.0
margin_right = 225.0
margin_bottom = 26.0
rect_min_size = Vector2( 225, 0 )
text = "Maximum Saturation:"
align = 2

[node name="MaxSatSpinbox" type="SpinBox" parent="MarginContainer/VBoxContainer/MaxSatHbox"]
margin_left = 229.0
margin_right = 384.0
margin_bottom = 31.0
size_flags_horizontal = 3
min_value = 0.5
max_value = 1.0
step = 0.01
value = 1.0
align = 1

[node name="OpacityCompHbox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 285.0
margin_right = 384.0
margin_bottom = 316.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/OpacityCompHbox"]
margin_top = 5.0
margin_right = 225.0
margin_bottom = 26.0
rect_min_size = Vector2( 225, 0 )
text = "Opacity: "
align = 2

[node name="OpacitySpinbox" type="SpinBox" parent="MarginContainer/VBoxContainer/OpacityCompHbox"]
margin_left = 229.0
margin_right = 384.0
margin_bottom = 31.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.75
align = 1

[node name="ReverseColorsHbox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 320.0
margin_right = 384.0
margin_bottom = 349.0

[node name="PaddingControl" type="Control" parent="MarginContainer/VBoxContainer/ReverseColorsHbox"]
margin_right = 167.0
margin_bottom = 29.0
size_flags_horizontal = 3

[node name="ReverseColorsCheckbox" type="CheckBox" parent="MarginContainer/VBoxContainer/ReverseColorsHbox"]
margin_left = 171.0
margin_right = 384.0
margin_bottom = 29.0
text = "Reverse Color Order"
[connection signal="about_to_show" from="." to="." method="_on_AutoColorSampleDialog_about_to_show"]
